Add Users#characterDelete. Remove text blocks until Eclipse fixes props.